cores botoes configuracao

--- a/modulo_frontend/Pages/Configuracoes/index.html
+++ b/modulo_frontend/Pages/Configuracoes/index.html
@@ -280,13 +280,11 @@
                                             </div>
                                         </div>
                                         <!-- configuracoes -->
-                                        <div class="form-group row">
-                                            <div class="col-sm-6 config-box">
-                                                <a class="btn btn-info fullsizebtn" href="../Login/passwd-recovery.html" role="button">Alterar Senha</a>
-                                            </div>
-                                        </div>
                                         <div class="form-group row justify-content-between">
                                             <div class="col-sm-6 config-box">
+                                                <a class="btn btn-info fullsizebtn" href="../Login/passwd-recovery.html" role="button" id="btnSenha">Alterar Senha</a>
+                                            </div>
+                                            <!-- <div class="col-sm-6 config-box">
                                                 <div class="dropdown fullsizebtn">
                                                     <button class="btn dropdown-toggle btn-secondary fullsizebtn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                                     Alterar Idioma</button>
@@ -295,7 +293,7 @@
                                                         <li><a class="dropdown-item" href="Index(english).html">English</a></li>
                                                     </ul>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="col-sm-6 config-box">
                                                 <button type="button" class="btn btn-success fullsizebtn float-config-salvar" id="btnSave">Salvar</button>
                                                 <button type="button" class="btn btn-dark fullsizebtn float-config-excluir" id="btnExcluir">excluir</button>
@@ -315,7 +313,7 @@
                                     <div class="margin_text">
                                         <p class="card-text">Você sabia que cumprindo com os objetivos voce acumula pontos?</p>
                                         <p class="card-text">Você pode gasta-los com configuracoes personalizadas como planos de fundo, icones e temas personalizados apenas para voce!</p>
-                                        <a href="#" class="btn btn-primary">Personalizar!</a>
+                                        <a href="#" class="btn btn-primary" id="btnPersonalizar">Personalizar!</a>
                                     </div>
                                 </div>
                                 <div class="card-footer text-muted">Pontuacao acumulada: <strong>0 pontos</strong></div>
