--- a/modulo_frontend/index.html
+++ b/modulo_frontend/index.html
@@ -27,7 +27,7 @@
                 <div class="txt-secondary">
                     <p>Colabore, gerencie projetos e alcance novos picos de produtividade. Seja em um arranha-céu ou em casa, o seu jeito de viver é único, e o Planejy pode ajudar você a produzir cada vez mais.</p>
                 </div>
-                <button type="button" class="btn btn-primary about-us">Saiba mais sobre nós</button>
+                <button type="button" class="btn btn-primary about-us" id="btnMore">Saiba mais sobre nós</button>
             </div>
             <div class="right-side col-12 col-md-8 col-lg-8">
                 <div class="login-box">
@@ -62,7 +62,7 @@
                     <div class="below-login">
                         <div class="btn-box create-account">
                             <h4>Não possui cadastro?</h4>
-                            <a href="/Pages/Login/register.html"><button class="btn btn-success btn-register" type="button">Criar conta</button></a>
+                            <a href="/Pages/Login/register.html"><button class="btn btn-success btn-register" type="button" id="btnCriar">Criar conta</button></a>
                         </div>
                         <div class="forgot-passwd-below-box">
                             <a href="/Pages/Login/passwd-recovery.html">Esqueceu sua senha?</a>
