--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -32,7 +32,7 @@
                                     <button class="btn btn-sm  btn dropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     <p class="Navbar_words">Notas</p>
                                 </button>
-                                    <ul class="dropdown-menu fundoBranco" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
+                                    <ul class="dropdown-menu fundoNotas" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Nota 1</a></li>
                                         <li><a class="dropdown-item" href="#">Nota 2</a></li>
                                         <li><a class="dropdown-item" href="#">Nota 3</a></li>
@@ -50,7 +50,7 @@
                                     <button class="btn btn-sm  btn dropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     <p class="Navbar_words">Projetos</p>
                                 </button>
-                                    <ul class="dropdown-menu fundoBranco" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
+                                    <ul class="dropdown-menu fundoNotas" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Projeto 1</a></li>
                                         <li><a class="dropdown-item" href="#">Projeto 2</a></li>
                                         <li><a class="dropdown-item" href="#">Projeto 3</a></li>
@@ -68,7 +68,7 @@
                                     <button class="btn btn-sm  btn dropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     <p class="Navbar_words">Membros</p>
                                 </button>
-                                    <ul class="dropdown-menu fundoBranco" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
+                                    <ul class="dropdown-menu fundoNotas" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Membro 1</a></li>
                                         <li><a class="dropdown-item" href="#">Membro 2</a></li>
                                         <li><a class="dropdown-item" href="#">Membro 3</a></li>
@@ -86,7 +86,7 @@
                                     <button class="btn btn-sm  btn dropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     <p class="Navbar_words">Configuracoes</p>
                                 </button>
-                                    <ul class="dropdown-menu fundoBranco" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
+                                    <ul class="dropdown-menu fundoNotas" id="max_menu_size" aria-labelledby="dropdownMenuButton1">
                                         <li><a class="dropdown-item" href="#">Configuracao 1</a></li>
                                         <li><a class="dropdown-item" href="#">Configuracao 2</a></li>
                                         <li><a class="dropdown-item" href="#">Configuracao 3</a></li>
