--- a/modulo_frontend/Pages/Login/about.html
+++ b/modulo_frontend/Pages/Login/about.html
@@ -32,23 +32,18 @@
                 <div class="purpose">
                     <h2 class="txt-primary">Objetivo</h2>
                     <p class="txt-secondary">O Planejy é um projeto criado com o objetivo de ajudar as pessoas que possuem dificuldade em planejar seu dia ou que são afetadas por procrastinarem a realização de tarefas.<br><br>A aplicação foi criada pensando justamente em ser
-                        rápida, fácil de utilizar e que disponibilize todas as funcionalidades necessárias para um bom planejamento das tarefas.</p>
+                        fácil de utilizar e que disponibilize todas as funcionalidades necessárias para um bom planejamento das tarefas.</br>Aqui voce tera acesso a um calendario onde pode adicionar suas notas de acordo com as necessidades que precisar,
+                        uma lista de artigos recomendadas especialmente para voce e uma lista de profissionais de acordo com suas necessidades</p>
+                    <p class="txt-secondary">Este trabalho foi criado durante as disciplinas de Trabalho Interdisciplinar no primeiro e segundo periodo do curso de Ciencia da Computacao na PUC MINAS, unidade Coracao Eucaristico em 2022.</p>
                 </div>
                 <div class="team-members">
                     <h2 class="txt-primary">Integrantes da equipe</h2>
                     <ul class="txt-secondary">
-                        <li>Gabriel Martins Vinci Almeida</li>
+                        <li>Marcos Antônio Lommez Cândido Ribeiro</li>
+                        <li>Bernardo Marques Fernandes</li>
                         <li>Gabriel Ramos Ferreira</li>
                         <li>João Vitor Romero Sales</li>
-                        <li>Marcos Antônio Lommez Cândido Ribeiro</li>
-                        <li>Matheus Moreira Sorrentino</li>
-                    </ul>
-                </div>
-                <div class="teachers">
-                    <h2 class="txt-primary">Professores responsáveis</h2>
-                    <ul class="txt-secondary">
-                        <li>Carlos Alberto Marques Pietrobon</li>
-                        <li>Rommel Vieira Carneiro</li>
+                        <li>Primo do Romero</li>
                     </ul>
                 </div>
 
