COMIT FINAL SPRINT 3 AWEEEHOO

--- a/modulo_frontend/Pages/Login/register.html
+++ b/modulo_frontend/Pages/Login/register.html
@@ -34,7 +34,7 @@
                             </div>
                             <form action="" class="form-register" id="register" method="post">
                                 <div class="input-box first-name-box">
-                                    <input type="text" id="firstname" class="form-control" name="firstname" pattern="^[a-zA-Z][a-zA-Z-_\.]{2,19}$" title="Mínimo 3 caracteres, máximo 20, somente letras. Ex.: John" placeholder="Nome" autocomplete="off" required>
+                                    <input type="text" id="firstname" class="form-control" name="firstname" pattern=".{2,19}$" title="Mínimo 3 caracteres, máximo 20, somente letras. Ex.: John" placeholder="Nome" autocomplete="off" required>
                                 </div>
                                 <div class="input-box nick-box">
                                     <input type="text" id="nickname" class="form-control" name="nickname" pattern=".{2,15}" title="Mínimo 2 caracteres, máximo 15, somente letras. Ex.: CoolNickName" placeholder="Nick" autocomplete="off" required>
