--- a/modulo_frontend/Pages/Login/about.html
+++ b/modulo_frontend/Pages/Login/about.html
@@ -41,9 +41,14 @@
                     <ul class="txt-secondary">
                         <li>Marcos Antônio Lommez Cândido Ribeiro</li>
                         <li>Bernardo Marques Fernandes</li>
-                        <li>Gabriel Ramos Ferreira</li>
+                        <li>Matheus Moreira Sorrentino</li>
                         <li>João Vitor Romero Sales</li>
                         <li>Primo do Romero</li>
+                    </ul>
+                    <h2 class="txt-primary">Mencoes honrosas</h2>
+                    <ul class="txt-secondary">
+                        <li>Gabriel Ramos Ferreira</li>
+                        <li>Mano Da Vinci</li>
                     </ul>
                 </div>
 
