--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link href='main.css' rel='stylesheet' />
-    <script src='main.js'></script>
+    <link href="main.css" rel="stylesheet" />
+    <script src="main.js"></script>
+    <script src="../scripts/count.js"></script>
     <script type="text/javascript" src="javascript.js" defer></script>
 </head>
 
