update articles star ratings

--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -242,37 +242,17 @@
                                         </div>
                                         <div class="col-sm-12 col-md-8 col-lg-9">
                                             <div class="card-body">
-                                                <!-- <p>Conseguir lidar com as redes sociais e a procrastinação pode ser uma tarefa árdua para os mais “conectados”. Isso porque a impressão que se constrói é que as redes sempre têm algo muito interessante para
-                                                    apresentar, enquanto que a tarefa obrigatória pode ser vista como algo monótono e tedioso.</p>
-                                                <p>Por isso, neste texto nós trouxemos algumas dicas práticas para você aprender a lidar com essa situação de uma forma mais assertiva. Acompanhe e saiba mais sobre esse assunto importante.</p>
-                                                <h3>Como lidar com a relação entre as redes sociais e a procrastinação?</h3>
-                                                <p>As redes sociais e a procrastinação caminham lado a lado no dia a dia das pessoas. E o pior: em muitas situações os sujeitos sequer se dão conta dessa realidade.</p>
-                                                <p>Sendo assim, o melhor a se fazer é praticar a autoanálise, a fim de verificar até quem ponto você vem procrastinando por conta de uma rede social.</p>
-                                                <p>Depois que você conseguir encontrar a resposta para o questionamento acima, cogite pensar em estratégias para lidar com isso. Abaixo listamos algumas delas:</p>
-                                                <h4>1. Tenha um horário fixo para usar as redes sociais</h4>
-                                                <p>Estabelecer um horário fixo para usar as suas redes sociais é um bom caminho. Isso porque você sabe que em determinado momento terá a oportunidade de verificar comentários, curtidas e interações com os seus
-                                                    perfis. E assim, não fica com tanta ansiedade para abrir o aplicativo e verificar o que está acontecendo por lá.</p>
-                                                <p>Lembre-se também de estabelecer um tempo limite para esse tipo de navegação. Assim você não corre o risco de usar a pausa para ver as redes como um caminho para passar mais de uma hora procrastinando.</p>
-                                                <h4>2. Mantenha as notificações desligadas enquanto você estuda/trabalha</h4>
-                                                <p>Se você está estudando ou trabalhando, cogite desligar todas as notificações das suas redes sociais. Isso evita que a tela do seu celular, sempre acendendo, acabe provocando aquele desejo de abrir a rede
-                                                    social novamente.</p>
-                                                <p>Além disso, se você se sentir tentado a cair no uso das redes sociais e a procrastinação aparecer, deixe o seu celular quase inacessível no momento em que estiver ocupado. Assim você diminui as chances de
-                                                    pegar o celular (que estaria perto) só para dar uma “espiadinha”.</p>
-                                                <h4>3. Acompanhe o tempo que você fica na rede social</h4>
-                                                <p>Os celulares mais modernos já vêm com esse tipo de controle integrado de fábrica. Ou seja, é possível saber exatamente quantas vezes você desbloqueou a tela, quantas notificações recebeu e quanto tempo permaneceu
-                                                    em cada aplicativo.</p> -->
                                             </div>
                                         </div>
                                         <div class="card-body model-1">
                                             <div class="floating-left">
                                                 <h6 class="autor">
-                                                    <!-- Camila Bonatti -->
                                                 </h6>
                                                 <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                             </div>
 
                                             <div class="floating-rigth">
-                                                <p>Estudo<br>Dia-a-Dia<br>Trabalho</p>
+                                                <!-- <p>Estudo<br>Dia-a-Dia<br>Trabalho</p> -->
                                             </div>
                                         </div>
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-2">
@@ -280,16 +260,15 @@
 
                                             <div class="floating-left">
                                                 <h6 class="autor">
-                                                    <!-- Camila Bonatti -->
                                                 </h6>
                                                 <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                                 <div>
                                                     <div class="rating">
-                                                        <input type="radio" name="rating" value="5" id="5"><label for="5"><img src="images/star0.png" class="img-star"></label>
+                                                        <!-- <input type="radio" name="rating" value="5" id="5"><label for="5"><img src="images/star0.png" class="img-star"></label>
                                                         <input type="radio" name="rating" value="4" id="4"><label for="4"><img src="images/star0.png" class="img-star"></label>
                                                         <input type="radio" name="rating" value="3" id="3"><label for="3"><img src="images/star1.png" class="img-star"></label>
                                                         <input type="radio" name="rating" value="2" id="2"><label for="2"><img src="images/star1.png" class="img-star"></label>
-                                                        <input type="radio" name="rating" value="1" id="1"><label for="1"><img src="images/star1.png" class="img-star"></label>
+                                                        <input type="radio" name="rating" value="1" id="1"><label for="1"><img src="images/star1.png" class="img-star"></label> -->
                                                     </div>
                                                     <p class="small text-muted n_votos">3.2/5 - 30 avaliacoes</p>
                                                 </div>
@@ -308,6 +287,7 @@
             </div>
         </div>
     </main>
+    <script src="scripts/stars.js"></script>
     <script src="scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
