--- a/modulo_frontend/index.html
+++ b/modulo_frontend/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="Pages/Login/styles/style.css">
     <link rel="stylesheet" href="Pages/Login/styles/style-login.css">
+    <link rel="shortcut icon" href="Pages/Login/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="Pages/Login/images/favicon.ico" type="image/x-icon">
     <title>Login | Planejy</title>
 </head>
 
