--- a/modulo_frontend/Pages/Login/register.html
+++ b/modulo_frontend/Pages/Login/register.html
@@ -11,63 +11,65 @@
     />
     <link rel="stylesheet" href="styles/style-register.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="/Pages/Login/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Pages/Login/images/favicon.ico" type=" image/x-icon ">
     <title>Cadastro | Planejy</title>
 </head>
 
 <body>
-    <main class="main container-fluid">
-        <div class="row">
-            <div class="back-box">
-                <i class="fa-solid fa-angle-left"></i>
+    <main class="main container-fluid ">
+        <div class="row ">
+            <div class="back-box ">
+                <i class="fa-solid fa-angle-left "></i>
             </div>
-            <div class="box-main col-12">
-                <div class="register-box">
-                    <div class="row">
-                        <div class="img-box col-12">
-                            <img src="images/login-img.png" id="register-img" alt="Foto de uma mesa com um papel, caneta e um grampeador bronze em cima dela.">
+            <div class="box-main col-12 ">
+                <div class="register-box ">
+                    <div class="row ">
+                        <div class="img-box col-12 ">
+                            <img src="images/login-img.png " id="register-img " alt="Foto de uma mesa com um papel, caneta e um grampeador bronze em cima dela. ">
                         </div>
                     </div>
-                    <div class="register-content row">
-                        <div class="col-12 col-md-12 col-lg-12">
-                            <div class="title-box">
+                    <div class="register-content row ">
+                        <div class="col-12 col-md-12 col-lg-12 ">
+                            <div class="title-box ">
                                 <h2>Cadastro</h2>
                             </div>
-                            <form action="" class="form-register" id="register" method="post">
-                                <div class="input-box first-name-box">
-                                    <input type="text" id="firstname" class="form-control" name="firstname" pattern=".{2,19}$" title="Mínimo 3 caracteres, máximo 20, somente letras. Ex.: John" placeholder="Nome" autocomplete="off" required>
+                            <form action=" " class="form-register " id="register " method="post ">
+                                <div class="input-box first-name-box ">
+                                    <input type="text " id="firstname " class="form-control " name="firstname " pattern=".{2,19}$ " title="Mínimo 3 caracteres, máximo 20, somente letras. Ex.: John " placeholder="Nome " autocomplete="off " required>
                                 </div>
-                                <div class="input-box nick-box">
-                                    <input type="text" id="nickname" class="form-control" name="nickname" pattern=".{2,15}" title="Mínimo 2 caracteres, máximo 15, somente letras. Ex.: CoolNickName" placeholder="Nick" autocomplete="off" required>
+                                <div class="input-box nick-box ">
+                                    <input type="text " id="nickname " class="form-control " name="nickname " pattern=".{2,15} " title="Mínimo 2 caracteres, máximo 15, somente letras. Ex.: CoolNickName " placeholder="Nick " autocomplete="off " required>
                                 </div>
-                                <div class="input-box email-box">
-                                    <input type="email" id="email" class="form-control" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Ex.: john@planejy.com" autocomplete="off" placeholder="Email" required>
+                                <div class="input-box email-box ">
+                                    <input type="email " id="email " class="form-control " name="email " pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$ " title="Ex.: john@planejy.com " autocomplete="off " placeholder="Email " required>
                                 </div>
-                                <div class="input-box confirm-email-box">
-                                    <input type="email" id="confirmemail" class="form-control" name="confirmemail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Ex.: john@planejy.com" placeholder="Confirme seu email" autocomplete="off" required>
+                                <div class="input-box confirm-email-box ">
+                                    <input type="email " id="confirmemail " class="form-control " name="confirmemail " pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$ " title="Ex.: john@planejy.com " placeholder="Confirme seu email " autocomplete="off " required>
                                 </div>
-                                <div class="input-box passwd-box">
-                                    <input type="password" id="passwd" class="form-control" name="passwd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
-                                        placeholder="Senha" required>
+                                <div class="input-box passwd-box ">
+                                    <input type="password " id="passwd " class="form-control " name="passwd " pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$ " title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um
+        número, letras maiúsculas e minúsculas e caracteres especiais. " placeholder="Senha " required>
                                 </div>
-                                <div class="input-box confirmpasswd-box">
-                                    <input type="password" id="confirmpasswd" class="form-control" name="confirmpasswd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
-                                        placeholder="Confirme sua senha" required>
-                                    <div class="eye-icon">
-                                        <button class="fa-solid fa-eye" id="show-passwd"></button>
-                                        <button class="fa-solid fa-eye-slash" id="hide-passwd"></button>
+                                <div class="input-box confirmpasswd-box ">
+                                    <input type="password " id="confirmpasswd " class="form-control " name="confirmpasswd " pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$ " title="Sua senha deve conter pelo menos 8 caracteres, tendo
+        pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais. " placeholder="Confirme sua senha " required>
+                                    <div class="eye-icon ">
+                                        <button class="fa-solid fa-eye " id="show-passwd "></button>
+                                        <button class="fa-solid fa-eye-slash " id="hide-passwd "></button>
                                     </div>
                                 </div>
-                                <div class="btn-box create-account">
-                                    <button class="btn btn-success btn-submit" type="submit">Criar conta</button>
+                                <div class="btn-box create-account ">
+                                    <button class="btn btn-success btn-submit " type="submit ">Criar conta</button>
                                 </div>
                             </form>
-                            <div class="separator">
+                            <div class="separator ">
                                 <hr>
                             </div>
-                            <div class="register-bottom">
+                            <div class="register-bottom ">
                                 <h4>Já possui cadastro?</h4>
-                                <div class="btn-box">
-                                    <button class="btn btn-primary btn-login" type="button">Fazer Login</button>
+                                <div class="btn-box ">
+                                    <button class="btn btn-primary btn-login " type="button ">Fazer Login</button>
                                 </div>
                             </div>
                         </div>
@@ -76,14 +78,14 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <div class="copyright-box">
+    <footer class="footer ">
+        <div class="copyright-box ">
             <span>&copy; Copyright 2022 - Planejy</span>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="scripts/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
+    <script src="scripts/register.js "></script>
 </body>
 
 </html>
