--- a/modulo_frontend/Pages/Login/reset-passwd.html
+++ b/modulo_frontend/Pages/Login/reset-passwd.html
@@ -11,48 +11,50 @@
     />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style-reset.css" />
+    <link rel="shortcut icon" href="/Pages/Login/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Pages/Login/images/favicon.ico" type=" image/x-icon ">
 </head>
 
 <body>
-    <main class="main container">
-        <div class="row">
-            <div class="back-box">
-                <i class="fa-solid fa-angle-left"></i>
+    <main class="main container ">
+        <div class="row ">
+            <div class="back-box ">
+                <i class="fa-solid fa-angle-left "></i>
             </div>
-            <div class="main-box">
-                <div class="reset-passwd">
-                    <h1 class="txt-primary">Nova senha</h1>
-                    <form class="reset-form">
-                        <div class="input-box">
-                            <input class="form-input new-passwd form-control" placeholder="Nova senha" type="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
-                                required/>
-                            <div class="eye-icon">
-                                <button class="fa-solid fa-eye" id="show-passwd"></button>
-                                <button class="fa-solid fa-eye-slash" id="hide-passwd"></button>
+            <div class="main-box ">
+                <div class="reset-passwd ">
+                    <h1 class="txt-primary ">Nova senha</h1>
+                    <form class="reset-form ">
+                        <div class="input-box ">
+                            <input class="form-input new-passwd form-control " placeholder="Nova senha " type="password " pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$ " title="Sua senha deve conter pelo menos 8 caracteres,
+        tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais. " required/>
+                            <div class="eye-icon ">
+                                <button class="fa-solid fa-eye " id="show-passwd "></button>
+                                <button class="fa-solid fa-eye-slash " id="hide-passwd "></button>
                             </div>
                         </div>
-                        <div class="input-box">
-                            <input class="form-input confirm-passwd form-control" placeholder="Confirmar nova senha" type="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
-                                required/>
-                            <div class="eye-icon">
-                                <button class="fa-solid fa-eye" id="show-confirmpwd"></button>
-                                <button class="fa-solid fa-eye-slash" id="hide-confirmpwd"></button>
+                        <div class="input-box ">
+                            <input class="form-input confirm-passwd form-control " placeholder="Confirmar nova senha " type="password " pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$ " title="Sua senha deve conter pelo menos
+        8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais. " required/>
+                            <div class="eye-icon ">
+                                <button class="fa-solid fa-eye " id="show-confirmpwd "></button>
+                                <button class="fa-solid fa-eye-slash " id="hide-confirmpwd "></button>
                             </div>
                         </div>
-                        <button class="btn btn-primary" type="submit">Enviar</button>
+                        <button class="btn btn-primary " type="submit ">Enviar</button>
                     </form>
-                    <span class="information"></span>
+                    <span class="information "></span>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <div class="copyright-box">
+    <footer class="footer ">
+        <div class="copyright-box ">
             <span>&copy; Copyright 2022 - Planejy</span>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="scripts/reset.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
+    <script src="scripts/reset.js "></script>
 </body>
 
 </html>
